fixed mobile project nav spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -139,6 +139,7 @@ nav p {
     margin: 0px;
     margin-right: 10%;
     margin-left: 10%;
+    padding-bottom: 3%;
 }
 #infoContainer{
     margin: 2%;
